--- a/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
@@ -160,4 +160,7 @@
       <Name>OnymousMobile</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\FondoApp.png" />
+  </ItemGroup>
 </Project>
