Estructura profile terminado con pagina diseñada

--- a/Onymous 1.0/OnymousMobile/OnymousMobile.Android/OnymousMobile.Android.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.Android/OnymousMobile.Android.csproj
@@ -52,6 +52,9 @@
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Naxam.BottomTabbedPage">
+      <Version>0.2.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="26.1.0.1" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="26.1.0.1" />
@@ -87,7 +90,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_person_white.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OnymousMobile\OnymousMobile.csproj">
       <Project>{440ED5A8-4AF9-4F15-B377-EC743513E396}</Project>
@@ -109,5 +114,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\FondoApp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_question_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ic_search_white.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
