--- a/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
@@ -163,4 +163,13 @@
   <ItemGroup>
     <BundleResource Include="Resources\FondoApp.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_person_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_question_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_search_white.png" />
+  </ItemGroup>
 </Project>
