--- a/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
@@ -104,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\FondoApp.png" />
+    <Content Include="Assets\ic_person_white.png" />
+    <Content Include="Assets\ic_question_white.png" />
+    <Content Include="Assets\ic_search_white.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
