--- a/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
@@ -104,6 +104,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\FondoApp.png" />
+    <Content Include="Assets\FondoAppVerde.png" />
+    <Content Include="Assets\ic_cancel_circle_primary.png" />
+    <Content Include="Assets\ic_check_circle_primary.png" />
     <Content Include="Assets\ic_person_white.png" />
     <Content Include="Assets\ic_question_white.png" />
     <Content Include="Assets\ic_search_white.png" />
@@ -147,6 +150,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
