--- a/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
@@ -148,6 +148,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CarouselView.FormsPlugin">
+      <Version>5.2.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
@@ -171,5 +174,14 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\ic_search_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\FondoAppVerde.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_cancel_circle_primary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\ic_check_circle_primary.png" />
   </ItemGroup>
 </Project>
