--- a/Onymous 1.0/Domain.Repository/Domain.Repository.csproj
+++ b/Onymous 1.0/Domain.Repository/Domain.Repository.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Person\IPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain.Base\Domain.Base.csproj">
