--- a/Onymous 1.0/IService/IService.csproj
+++ b/Onymous 1.0/IService/IService.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Person\DTOs\PersonDto.cs" />
     <Compile Include="Person\IPersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\DTOs\UserDto.cs" />
+    <Compile Include="User\IUserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Service.Base\Service.Base.csproj">
