--- a/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
+++ b/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Person\PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain.Base\Domain.Base.csproj">
