--- a/Onymous 1.0/Service/Service.csproj
+++ b/Onymous 1.0/Service/Service.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Person\PersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="User\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Domain.Base\Domain.Base.csproj">
