--- a/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
+++ b/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="Person\PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Question\QuestionRepository.cs" />
     <Compile Include="User\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -82,5 +83,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
