--- a/Onymous 1.0/Domain.Repository/Domain.Repository.csproj
+++ b/Onymous 1.0/Domain.Repository/Domain.Repository.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Person\IPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question\IQuestionRepository.cs" />
+    <Compile Include="UserData\IUserDataRepository.cs" />
     <Compile Include="User\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
