--- a/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
+++ b/Onymous 1.0/Infrastructure.Repository/Infrastructure.Repository.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Person\PersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question\QuestionRepository.cs" />
+    <Compile Include="UserData\UserDataRepository.cs" />
     <Compile Include="User\UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
