--- a/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.UWP/OnymousMobile.UWP.csproj
@@ -106,10 +106,16 @@
     <Content Include="Assets\FondoApp.png" />
     <Content Include="Assets\FondoAppVerde.png" />
     <Content Include="Assets\ic_cancel_circle_primary.png" />
+    <Content Include="Assets\ic_cancel_circle_white.png" />
     <Content Include="Assets\ic_check_circle_primary.png" />
+    <Content Include="Assets\ic_circle_primary.png" />
+    <Content Include="Assets\ic_menu_circle_white.png" />
+    <Content Include="Assets\ic_message_white.png" />
+    <Content Include="Assets\ic_no_start_white.png" />
     <Content Include="Assets\ic_person_white.png" />
     <Content Include="Assets\ic_question_white.png" />
     <Content Include="Assets\ic_search_white.png" />
+    <Content Include="Assets\ic_start_white.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\LargeTile.scale-200.png" />
     <Content Include="Assets\LargeTile.scale-400.png" />
@@ -156,8 +162,20 @@
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
+    <PackageReference Include="SuaveControls.FloatingActionButton">
+      <Version>2018.1.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
+    <PackageReference Include="Xamarin.Forms.BehaviorValidationPack">
+      <Version>1.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.DataGrid">
+      <Version>3.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.InputKit">
+      <Version>2.3.5</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OnymousMobile\OnymousMobile.csproj">
