--- a/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
+++ b/Onymous 1.0/OnymousMobile/OnymousMobile.iOS/OnymousMobile.iOS.csproj
@@ -154,7 +154,25 @@
     <PackageReference Include="MvvmLightLibs">
       <Version>5.4.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Refractored.FloatingActionButtonForms">
+      <Version>2.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="SegmentedControl.FormsPlugin">
+      <Version>2.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="SuaveControls.FloatingActionButton">
+      <Version>2018.1.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.3.0.967583" />
+    <PackageReference Include="Xamarin.Forms.BehaviorValidationPack">
+      <Version>1.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.DataGrid">
+      <Version>3.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms.InputKit">
+      <Version>2.3.5</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -167,21 +185,21 @@
     <BundleResource Include="Resources\FondoApp.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_person_white.png" />
+    <BundleResource Include="Resources\ic_email_primary.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_question_white.png" />
+    <BundleResource Include="Resources\ic_lock_primary.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_search_white.png" />
+    <BundleResource Include="Resources\ic_person_primary.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\FondoAppVerde.png" />
+    <BundleResource Include="Resources\ic_phone_primary.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_cancel_circle_primary.png" />
+    <BundleResource Include="Resources\ic_visibility_off_primary.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\ic_check_circle_primary.png" />
+    <BundleResource Include="Resources\ic_visibility_primary.png" />
   </ItemGroup>
 </Project>
