--- a/Onymous 1.0/Service/Service.csproj
+++ b/Onymous 1.0/Service/Service.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Person\PersonService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Question\QuestionService.cs" />
+    <Compile Include="UserData\UserDataService.cs" />
     <Compile Include="User\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
